@@ -162,7 +162,7 @@ public final class ASAP
 	private final ASAP_State ast = new ASAP_State();
 
 	/** ASAP version. */
-	public static final String VERSION = "1.2.1";
+	public static final String VERSION = "1.3.0";
 
 	/** Maximum length of a supported input file.
 	    You can assume that files longer than this are not supported by ASAP. */
@@ -216,6 +216,8 @@ public final class ASAP
 	    @return number of milliseconds represented by the string */
 	public static int parseDuration(String s)
 	{
+		if (s == null || s.length() == 0)
+			return -1;
 		int i = s.indexOf(':');
 		int r = 0;
 		if (i >= 0) {
