@@ -34,18 +34,23 @@ The applet understands the following parameters:
 - `file` - URL of the file to play
 - `song` - zero-based subsong number
 - `defaultPlaybackTime` - playback time for songs with unspecified duration,
-  in the "mm:ss.xxx" format
+  in the `"mm:ss.xxx"` format
 - `loopPlaybackTime` - playback time for songs marked as looping
-- `background` - background color specified as six hexadecimal digits ("rrggbb")
-- `foreground` - volume bars color specified as six hexadecimal digits ("rrggbb")
+  (use `ONCE` to stop playback when the loop starts)
+- `background` - background color specified as six hexadecimal digits (`"rrggbb"`)
+- `foreground` - volume bars color specified as six hexadecimal digits (`"rrggbb"`)
 - `onPlaybackEnd` - JavaScript to be executed when playback ends
 
 The applet contains the following methods that can be called from JavaScript:
 
-- `void play(String filename, int song, String defaultPlaybackTime, String loopPlaybackTime)` -
-  plays the specified song
+- `void setPlaybackTime(String defaultPlaybackTime, String loopPlaybackTime)` - sets
+  playback times (see above)
+- `void play(String filename, int song)` - plays the specified song (-1 for default)
 - `void stop()` - stops playback
 - `boolean togglePause()` - toggles pause and returns `true` if pause has been enabled
+- `String getAuthor()` - returns the AUTHOR tag of the playing song
+- `String getName()` - returns the NAME tag of the playing song
+- `String getDate()` - returns the DATE tag of the playing song
 
 Remember to add the `mayscript` attribute to the `applet` element
 when interfacing with JavaScript.
